tests/Tuc/Fixtures/errors/CalledUndefinedMethod.tuc
tuc parse error test
participants
    GenericService parts
    Service parts

GenericService
    Service.UndefinedMethod
